--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<button class="">hello</button>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            hello
+        </div>
+    </div>
+</div>
