--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
-            hello
+        <div class="col-md-12" style="margin-top: 20px;">
+            <app-binding></app-binding>
         </div>
     </div>
 </div>
