--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-md-12" style="margin-top: 20px;">
             <app-binding></app-binding>
+            <app-directives-assignment></app-directives-assignment>
         </div>
     </div>
 </div>
